crates/toml_edit/tests/snapshots/invalid/datetime/y10k.stderr
TOML parse error at line 2, column 5
  |
2 | d = 10000-01-01 00:00:00z
  |     ^^^^^^^^^^^^^^^^^^^^^
invalid date, expected a four-digit year (YYYY)
